# HeteroAccel-Service

./: README.md  demo_run_graph_main_gpu_server_lib.cc  openvino.yaml
cekubescheduler/cluster/: common.sh
cekubescheduler/cmd/kube-scheduler/app/: server.go
cekubescheduler/cmd/kube-scheduler/app/config/: config.go
cekubescheduler/pkg/scheduler/: factory.go  generic_scheduler.go  scheduler.go
cekubescheduler/pkg/scheduler/framework/: interface.go
cekubescheduler/pkg/scheduler/framework/plugins/noderesources/: least_allocated.go  resource_allocation.go
cekubescheduler/pkg/scheduler/framework/runtime/: framework.go
cekubescheduler/test/cmd/: delete.sh
human_pose_estimation_demo1/: CMakeLists.txt  README.md  main.cpp
human_pose_estimation_demo1/include/: human_pose.hpp  human_pose_estimation_demo.hpp  human_pose_estimator.hpp  peak.hpp  render_human_pose.hpp
human_pose_estimation_demo1/src/: human_pose_estimator.cpp  peak.cpp
object_detection_demo_ssd_async/: CMakeLists.txt  README.md  main.cpp  object_detection_demo_ssd_async.hpp
smartclassroom/: main.cpp
text_detection_demo1/: CMakeLists.txt  README.md  main.cpp  text_detection_demo.hpp
text_detection_demo1/include/: cnn.hpp  image_grabber.hpp  text_detection.hpp  text_recognition.hpp
text_detection_demo1/src/: cnn.cpp  image_grabber.cpp  text_detection.cpp  text_recognition.cpp
